--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
     sdk: flutter
   sqflite: ^2.0.0+3
   intl: ^0.17.0
-  flutter_local_notifications: ^9.1.6
+  flutter_local_notifications: ^17.2.1
+  timezone: ^0.9.4
 
 
 
