--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,8 @@ dependencies:
     sdk: flutter
   sqflite: ^2.0.0+3
   intl: ^0.17.0
-  flutter_local_notifications: ^17.2.1
   timezone: ^0.9.4
-
-
+  awesome_notifications: ^0.7.4+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
